made BETA warning size correctly on smaller screens

--- a/app/assets/stylesheets/website/organisations.scss
+++ b/app/assets/stylesheets/website/organisations.scss
@@ -23,7 +23,7 @@
 
   #organisation_disclaimer {
     background-color: #F17921;
-    height: 1.5em;
+    min-height: 1.5em;
 
     h1, p {
       display: inline;
